force-app/main/default/objects/Deceased_Customer__c/Deceased_Customer__c.object-meta.xml
<CustomObject>
    <label>Deceased Customer</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Deceased Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deceased Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>