force-app/main/default/objects/Deceased_Customer__c/fields/Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>