force-app/main/default/objects/Deceased_Customer__c/fields/Documents_Provided__c.field-meta.xml
<CustomField>
    <fullName>Documents_Provided__c</fullName>
    <label>Documents Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Death Certificate</fullName>
            </value>
            <value>
                <fullName>Domiciliary Letter</fullName>
            </value>
            <value>
                <fullName>Transfer by Affidavit</fullName>
            </value>
            <value>
                <fullName>Death Notification from Social Security Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>