force-app/main/default/objects/Deceased_Customer__c/fields/Executor_of_Estate_Email__c.field-meta.xml
<CustomField>
    <fullName>Executor_of_Estate_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executor of Estate Email</label>
    <type>Email</type>
</CustomField>