force-app/main/default/objects/Deceased_Customer__c/fields/Executor_of_Estate_Name__c.field-meta.xml
<CustomField>
    <fullName>Executor_of_Estate_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executor of Estate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>