force-app/main/default/objects/Deceased_Customer__c/fields/Executor_of_Estate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Executor_of_Estate_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executor of Estate Phone</label>
    <type>Phone</type>
</CustomField>