force-app/main/default/objects/Deceased_Customer__c/fields/Notifying_Individual_Email__c.field-meta.xml
<CustomField>
    <fullName>Notifying_Individual_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notifying Individual Email</label>
    <type>Email</type>
</CustomField>