force-app/main/default/objects/Deceased_Customer__c/fields/Notifying_Individual_Executor_of_Estate__c.field-meta.xml
<CustomField>
    <fullName>Notifying_Individual_Executor_of_Estate__c</fullName>
    <label>Notifying Individual Executor of Estate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>