force-app/main/default/objects/Deceased_Customer__c/fields/Notifying_Individual_Name__c.field-meta.xml
<CustomField>
    <fullName>Notifying_Individual_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notifying Individual Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>