force-app/main/default/objects/Deceased_Customer__c/fields/Notifying_Individual_Phone__c.field-meta.xml
<CustomField>
    <fullName>Notifying_Individual_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notifying Individual Phone</label>
    <type>Phone</type>
</CustomField>