force-app/main/default/objects/Deceased_Customer__c/fields/Relationship_to_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Deceased__c</fullName>
    <label>Relationship to Deceased</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>