force-app/main/default/objects/Deceased_Customer__c/fields/Relationship_to_Deceased_Description__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Deceased_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship to Deceased Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>