force-app/main/default/objects/Deceased_Customer__c/listViews/Deceased_Customer_Deceased_Customer1.listView-meta.xml
<ListView>
    <fullName>Deceased_Customer_Deceased_Customer1</fullName>
    <filterScope>Queue</filterScope>
    <label>Deceased Customer</label>
    <queue>Deceased_Customer</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>